make sure module go behind currently playing bar

--- a/static/less/module-currently_playing.less
+++ b/static/less/module-currently_playing.less
@@ -7,6 +7,7 @@
   padding: 20px;
   position: fixed;
   right: 0;
+  z-index: 9999;
 
   .box-shadow(#222, 0, 0, 10px);
 
